# brainchip_devhub

./: .gitattributes  README.md  pyproject.toml
.claude/commands/: model-zoo-example.md
akida1/model_zoo/plant_village/: README.md  plant_village_benchmark.py  plant_village_data.py  plant_village_eval.py  plant_village_model.py  plant_village_notebook.ipynb  plant_village_notebook.py  plant_village_notebook_benchmark.ipynb  plant_village_notebook_training.ipynb  plant_village_train.py  plant_village_train.sh  update_readme.py
akida1/model_zoo/plant_village/docs/: README.md.template  metrics.json
akida1/model_zoo/plant_village/pretrained_models/: akidanet_plant_village.h5  akidanet_plant_village_qat.fbz  akidanet_plant_village_qat.h5
akida1/model_zoo/speech_commands/: README.md  regularizers_custom.py  speech_commands_benchmark.py  speech_commands_data_loader.py  speech_commands_eval.py  speech_commands_model.py  speech_commands_notebook_benchmark.ipynb  speech_commands_notebook_training.ipynb  speech_commands_train.py  speech_commands_train.sh
akida1/model_zoo/speech_commands/configs/: training_cfg.yml
akida1/model_zoo/speech_commands/docs/: README.md.template  metrics.json
akida1/model_zoo/speech_commands/pretrained_models/: speech_commands.h5  speech_commands_iq8_wq4_aq4.h5  (+3 more)
akida1/model_zoo/vww/: README.md  vww_benchmark.py  vww_data.py  vww_eval.py  vww_model.py  vww_notebook.ipynb  vww_notebook.py  vww_notebook_benchmark.ipynb  vww_notebook_training.ipynb  vww_train.py  vww_train.sh
brainchip_utils/: hardware_utils.py  plot_utils.py
(+6 files in other folders)
