[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "brainchip_utils"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "akida",
    "matplotlib",
    "numpy",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["brainchip_utils*"]
